y3/jpp/assignment-interpreter/luna/examples/bad/01-02-badexpr.luna
var x: int = return 1;